ERT URL correction in systemd service

--- a/utilities/ethercalc_revision_tool.service
+++ b/utilities/ethercalc_revision_tool.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Restore your calc's old revisions
-Documentation=https://git.framasoft.org/framasoft/ethercalc_revision_tool
+Documentation=https://git.framasoft.org/framasoft/ert
 Requires=network.target
 After=network.target
 
